2_Parser/Code/y.output
Terminals unused in grammar

   ERROR


문법

    0 $accept: program $end

    1 program: declaration_list

    2 declaration_list: declaration_list declaration
    3                 | declaration

    4 declaration: var_declaration
    5            | fun_declaration

    6 var_declaration: type_specifier id SEMI
    7                | type_specifier id LBRACE num RBRACE SEMI

    8 type_specifier: INT
    9               | VOID

   10 fun_declaration: type_specifier id LPAREN params RPAREN compound_stmt

   11 params: param_list
   12       | VOID

   13 param_list: param_list COMMA param
   14           | param

   15 param: type_specifier id
   16      | type_specifier id LBRACE RBRACE

   17 compound_stmt: LCURLY local_declarations statement_list RCURLY

   18 local_declarations: local_declarations var_declaration
   19                   | %empty

   20 statement_list: statement_list statement
   21               | %empty

   22 statement: expression_stmt
   23          | compound_stmt
   24          | selection_stmt
   25          | iteration_stmt
   26          | return_stmt

   27 expression_stmt: expression SEMI
   28                | SEMI

   29 selection_stmt: IF LPAREN expression RPAREN statement
   30               | IF LPAREN expression RPAREN statement ELSE statement

   31 iteration_stmt: WHILE LPAREN expression RPAREN statement

   32 return_stmt: RETURN SEMI
   33            | RETURN expression SEMI

   34 expression: var ASSIGN expression
   35           | simple_expression

   36 var: id
   37    | id LBRACE expression RBRACE

   38 simple_expression: additive_expression relop additive_expression
   39                  | additive_expression

   40 relop: LE
   41      | LT
   42      | GE
   43      | GT
   44      | EQ
   45      | NE

   46 additive_expression: additive_expression addop term
   47                    | term

   48 addop: PLUS
   49      | MINUS

   50 term: term mulop factor
   51     | factor

   52 mulop: TIMES
   53      | OVER

   54 factor: LPAREN expression RPAREN
   55       | var
   56       | call
   57       | num

   58 call: id LPAREN args RPAREN

   59 args: arg_list
   60     | %empty

   61 arg_list: arg_list COMMA expression
   62         | expression

   63 id: ID

   64 num: NUM
   65    | PLUS num
   66    | MINUS num


Terminals, with rules where they appear

$end (0) 0
error (256)
IF (258) 29 30
ELSE (259) 30
WHILE (260) 31
RETURN (261) 32 33
INT (262) 8
VOID (263) 9 12
ID (264) 63
NUM (265) 64
ASSIGN (266) 34
EQ (267) 44
NE (268) 45
LT (269) 41
LE (270) 40
GT (271) 43
GE (272) 42
PLUS (273) 48 65
MINUS (274) 49 66
TIMES (275) 52
OVER (276) 53
SEMI (277) 6 7 27 28 32 33
COMMA (278) 13 61
LPAREN (279) 10 29 30 31 54 58
RPAREN (280) 10 29 30 31 54 58
LBRACE (281) 7 16 37
RBRACE (282) 7 16 37
LCURLY (283) 17
RCURLY (284) 17
ERROR (285)
OUTER (286)


Nonterminals, with rules where they appear

$accept (32)
    on left: 0
program (33)
    on left: 1, on right: 0
declaration_list (34)
    on left: 2 3, on right: 1 2
declaration (35)
    on left: 4 5, on right: 2 3
var_declaration (36)
    on left: 6 7, on right: 4 18
type_specifier (37)
    on left: 8 9, on right: 6 7 10 15 16
fun_declaration (38)
    on left: 10, on right: 5
params (39)
    on left: 11 12, on right: 10
param_list (40)
    on left: 13 14, on right: 11 13
param (41)
    on left: 15 16, on right: 13 14
compound_stmt (42)
    on left: 17, on right: 10 23
local_declarations (43)
    on left: 18 19, on right: 17 18
statement_list (44)
    on left: 20 21, on right: 17 20
statement (45)
    on left: 22 23 24 25 26, on right: 20 29 30 31
expression_stmt (46)
    on left: 27 28, on right: 22
selection_stmt (47)
    on left: 29 30, on right: 24
iteration_stmt (48)
    on left: 31, on right: 25
return_stmt (49)
    on left: 32 33, on right: 26
expression (50)
    on left: 34 35, on right: 27 29 30 31 33 34 37 54 61 62
var (51)
    on left: 36 37, on right: 34 55
simple_expression (52)
    on left: 38 39, on right: 35
relop (53)
    on left: 40 41 42 43 44 45, on right: 38
additive_expression (54)
    on left: 46 47, on right: 38 39 46
addop (55)
    on left: 48 49, on right: 46
term (56)
    on left: 50 51, on right: 46 47 50
mulop (57)
    on left: 52 53, on right: 50
factor (58)
    on left: 54 55 56 57, on right: 50 51
call (59)
    on left: 58, on right: 56
args (60)
    on left: 59 60, on right: 58
arg_list (61)
    on left: 61 62, on right: 59 61
id (62)
    on left: 63, on right: 6 7 10 15 16 36 37 58
num (63)
    on left: 64 65 66, on right: 7 57 65 66


State 0

    0 $accept: . program $end

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    program           go to state 3
    declaration_list  go to state 4
    declaration       go to state 5
    var_declaration   go to state 6
    type_specifier    go to state 7
    fun_declaration   go to state 8


State 1

    8 type_specifier: INT .

    $default  reduce using rule 8 (type_specifier)


State 2

    9 type_specifier: VOID .

    $default  reduce using rule 9 (type_specifier)


State 3

    0 $accept: program . $end

    $end  shift, and go to state 9


State 4

    1 program: declaration_list .
    2 declaration_list: declaration_list . declaration

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    $default  reduce using rule 1 (program)

    declaration      go to state 10
    var_declaration  go to state 6
    type_specifier   go to state 7
    fun_declaration  go to state 8


State 5

    3 declaration_list: declaration .

    $default  reduce using rule 3 (declaration_list)


State 6

    4 declaration: var_declaration .

    $default  reduce using rule 4 (declaration)


State 7

    6 var_declaration: type_specifier . id SEMI
    7                | type_specifier . id LBRACE num RBRACE SEMI
   10 fun_declaration: type_specifier . id LPAREN params RPAREN compound_stmt

    ID  shift, and go to state 11

    id  go to state 12


State 8

    5 declaration: fun_declaration .

    $default  reduce using rule 5 (declaration)


State 9

    0 $accept: program $end .

    $default  accept


State 10

    2 declaration_list: declaration_list declaration .

    $default  reduce using rule 2 (declaration_list)


State 11

   63 id: ID .

    $default  reduce using rule 63 (id)


State 12

    6 var_declaration: type_specifier id . SEMI
    7                | type_specifier id . LBRACE num RBRACE SEMI
   10 fun_declaration: type_specifier id . LPAREN params RPAREN compound_stmt

    SEMI    shift, and go to state 13
    LPAREN  shift, and go to state 14
    LBRACE  shift, and go to state 15


State 13

    6 var_declaration: type_specifier id SEMI .

    $default  reduce using rule 6 (var_declaration)


State 14

   10 fun_declaration: type_specifier id LPAREN . params RPAREN compound_stmt

    INT   shift, and go to state 1
    VOID  shift, and go to state 16

    type_specifier  go to state 17
    params          go to state 18
    param_list      go to state 19
    param           go to state 20


State 15

    7 var_declaration: type_specifier id LBRACE . num RBRACE SEMI

    NUM    shift, and go to state 21
    PLUS   shift, and go to state 22
    MINUS  shift, and go to state 23

    num  go to state 24


State 16

    9 type_specifier: VOID .
   12 params: VOID .

    RPAREN    reduce using rule 12 (params)
    $default  reduce using rule 9 (type_specifier)


State 17

   15 param: type_specifier . id
   16      | type_specifier . id LBRACE RBRACE

    ID  shift, and go to state 11

    id  go to state 25


State 18

   10 fun_declaration: type_specifier id LPAREN params . RPAREN compound_stmt

    RPAREN  shift, and go to state 26


State 19

   11 params: param_list .
   13 param_list: param_list . COMMA param

    COMMA  shift, and go to state 27

    $default  reduce using rule 11 (params)


State 20

   14 param_list: param .

    $default  reduce using rule 14 (param_list)


State 21

   64 num: NUM .

    $default  reduce using rule 64 (num)


State 22

   65 num: PLUS . num

    NUM    shift, and go to state 21
    PLUS   shift, and go to state 22
    MINUS  shift, and go to state 23

    num  go to state 28


State 23

   66 num: MINUS . num

    NUM    shift, and go to state 21
    PLUS   shift, and go to state 22
    MINUS  shift, and go to state 23

    num  go to state 29


State 24

    7 var_declaration: type_specifier id LBRACE num . RBRACE SEMI

    RBRACE  shift, and go to state 30


State 25

   15 param: type_specifier id .
   16      | type_specifier id . LBRACE RBRACE

    LBRACE  shift, and go to state 31

    $default  reduce using rule 15 (param)


State 26

   10 fun_declaration: type_specifier id LPAREN params RPAREN . compound_stmt

    LCURLY  shift, and go to state 32

    compound_stmt  go to state 33


State 27

   13 param_list: param_list COMMA . param

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    type_specifier  go to state 17
    param           go to state 34


State 28

   65 num: PLUS num .

    $default  reduce using rule 65 (num)


State 29

   66 num: MINUS num .

    $default  reduce using rule 66 (num)


State 30

    7 var_declaration: type_specifier id LBRACE num RBRACE . SEMI

    SEMI  shift, and go to state 35


State 31

   16 param: type_specifier id LBRACE . RBRACE

    RBRACE  shift, and go to state 36


State 32

   17 compound_stmt: LCURLY . local_declarations statement_list RCURLY

    $default  reduce using rule 19 (local_declarations)

    local_declarations  go to state 37


State 33

   10 fun_declaration: type_specifier id LPAREN params RPAREN compound_stmt .

    $default  reduce using rule 10 (fun_declaration)


State 34

   13 param_list: param_list COMMA param .

    $default  reduce using rule 13 (param_list)


State 35

    7 var_declaration: type_specifier id LBRACE num RBRACE SEMI .

    $default  reduce using rule 7 (var_declaration)


State 36

   16 param: type_specifier id LBRACE RBRACE .

    $default  reduce using rule 16 (param)


State 37

   17 compound_stmt: LCURLY local_declarations . statement_list RCURLY
   18 local_declarations: local_declarations . var_declaration

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    $default  reduce using rule 21 (statement_list)

    var_declaration  go to state 38
    type_specifier   go to state 39
    statement_list   go to state 40


State 38

   18 local_declarations: local_declarations var_declaration .

    $default  reduce using rule 18 (local_declarations)


State 39

    6 var_declaration: type_specifier . id SEMI
    7                | type_specifier . id LBRACE num RBRACE SEMI

    ID  shift, and go to state 11

    id  go to state 41


State 40

   17 compound_stmt: LCURLY local_declarations statement_list . RCURLY
   20 statement_list: statement_list . statement

    IF      shift, and go to state 42
    WHILE   shift, and go to state 43
    RETURN  shift, and go to state 44
    ID      shift, and go to state 11
    NUM     shift, and go to state 21
    PLUS    shift, and go to state 22
    MINUS   shift, and go to state 23
    SEMI    shift, and go to state 45
    LPAREN  shift, and go to state 46
    LCURLY  shift, and go to state 32
    RCURLY  shift, and go to state 47

    compound_stmt        go to state 48
    statement            go to state 49
    expression_stmt      go to state 50
    selection_stmt       go to state 51
    iteration_stmt       go to state 52
    return_stmt          go to state 53
    expression           go to state 54
    var                  go to state 55
    simple_expression    go to state 56
    additive_expression  go to state 57
    term                 go to state 58
    factor               go to state 59
    call                 go to state 60
    id                   go to state 61
    num                  go to state 62


State 41

    6 var_declaration: type_specifier id . SEMI
    7                | type_specifier id . LBRACE num RBRACE SEMI

    SEMI    shift, and go to state 13
    LBRACE  shift, and go to state 15


State 42

   29 selection_stmt: IF . LPAREN expression RPAREN statement
   30               | IF . LPAREN expression RPAREN statement ELSE statement

    LPAREN  shift, and go to state 63


State 43

   31 iteration_stmt: WHILE . LPAREN expression RPAREN statement

    LPAREN  shift, and go to state 64


State 44

   32 return_stmt: RETURN . SEMI
   33            | RETURN . expression SEMI

    ID      shift, and go to state 11
    NUM     shift, and go to state 21
    PLUS    shift, and go to state 22
    MINUS   shift, and go to state 23
    SEMI    shift, and go to state 65
    LPAREN  shift, and go to state 46

    expression           go to state 66
    var                  go to state 55
    simple_expression    go to state 56
    additive_expression  go to state 57
    term                 go to state 58
    factor               go to state 59
    call                 go to state 60
    id                   go to state 61
    num                  go to state 62


State 45

   28 expression_stmt: SEMI .

    $default  reduce using rule 28 (expression_stmt)


State 46

   54 factor: LPAREN . expression RPAREN

    ID      shift, and go to state 11
    NUM     shift, and go to state 21
    PLUS    shift, and go to state 22
    MINUS   shift, and go to state 23
    LPAREN  shift, and go to state 46

    expression           go to state 67
    var                  go to state 55
    simple_expression    go to state 56
    additive_expression  go to state 57
    term                 go to state 58
    factor               go to state 59
    call                 go to state 60
    id                   go to state 61
    num                  go to state 62


State 47

   17 compound_stmt: LCURLY local_declarations statement_list RCURLY .

    $default  reduce using rule 17 (compound_stmt)


State 48

   23 statement: compound_stmt .

    $default  reduce using rule 23 (statement)


State 49

   20 statement_list: statement_list statement .

    $default  reduce using rule 20 (statement_list)


State 50

   22 statement: expression_stmt .

    $default  reduce using rule 22 (statement)


State 51

   24 statement: selection_stmt .

    $default  reduce using rule 24 (statement)


State 52

   25 statement: iteration_stmt .

    $default  reduce using rule 25 (statement)


State 53

   26 statement: return_stmt .

    $default  reduce using rule 26 (statement)


State 54

   27 expression_stmt: expression . SEMI

    SEMI  shift, and go to state 68


State 55

   34 expression: var . ASSIGN expression
   55 factor: var .

    ASSIGN  shift, and go to state 69

    $default  reduce using rule 55 (factor)


State 56

   35 expression: simple_expression .

    $default  reduce using rule 35 (expression)


State 57

   38 simple_expression: additive_expression . relop additive_expression
   39                  | additive_expression .
   46 additive_expression: additive_expression . addop term

    EQ     shift, and go to state 70
    NE     shift, and go to state 71
    LT     shift, and go to state 72
    LE     shift, and go to state 73
    GT     shift, and go to state 74
    GE     shift, and go to state 75
    PLUS   shift, and go to state 76
    MINUS  shift, and go to state 77

    $default  reduce using rule 39 (simple_expression)

    relop  go to state 78
    addop  go to state 79


State 58

   47 additive_expression: term .
   50 term: term . mulop factor

    TIMES  shift, and go to state 80
    OVER   shift, and go to state 81

    $default  reduce using rule 47 (additive_expression)

    mulop  go to state 82


State 59

   51 term: factor .

    $default  reduce using rule 51 (term)


State 60

   56 factor: call .

    $default  reduce using rule 56 (factor)


State 61

   36 var: id .
   37    | id . LBRACE expression RBRACE
   58 call: id . LPAREN args RPAREN

    LPAREN  shift, and go to state 83
    LBRACE  shift, and go to state 84

    $default  reduce using rule 36 (var)


State 62

   57 factor: num .

    $default  reduce using rule 57 (factor)


State 63

   29 selection_stmt: IF LPAREN . expression RPAREN statement
   30               | IF LPAREN . expression RPAREN statement ELSE statement

    ID      shift, and go to state 11
    NUM     shift, and go to state 21
    PLUS    shift, and go to state 22
    MINUS   shift, and go to state 23
    LPAREN  shift, and go to state 46

    expression           go to state 85
    var                  go to state 55
    simple_expression    go to state 56
    additive_expression  go to state 57
    term                 go to state 58
    factor               go to state 59
    call                 go to state 60
    id                   go to state 61
    num                  go to state 62


State 64

   31 iteration_stmt: WHILE LPAREN . expression RPAREN statement

    ID      shift, and go to state 11
    NUM     shift, and go to state 21
    PLUS    shift, and go to state 22
    MINUS   shift, and go to state 23
    LPAREN  shift, and go to state 46

    expression           go to state 86
    var                  go to state 55
    simple_expression    go to state 56
    additive_expression  go to state 57
    term                 go to state 58
    factor               go to state 59
    call                 go to state 60
    id                   go to state 61
    num                  go to state 62


State 65

   32 return_stmt: RETURN SEMI .

    $default  reduce using rule 32 (return_stmt)


State 66

   33 return_stmt: RETURN expression . SEMI

    SEMI  shift, and go to state 87


State 67

   54 factor: LPAREN expression . RPAREN

    RPAREN  shift, and go to state 88


State 68

   27 expression_stmt: expression SEMI .

    $default  reduce using rule 27 (expression_stmt)


State 69

   34 expression: var ASSIGN . expression

    ID      shift, and go to state 11
    NUM     shift, and go to state 21
    PLUS    shift, and go to state 22
    MINUS   shift, and go to state 23
    LPAREN  shift, and go to state 46

    expression           go to state 89
    var                  go to state 55
    simple_expression    go to state 56
    additive_expression  go to state 57
    term                 go to state 58
    factor               go to state 59
    call                 go to state 60
    id                   go to state 61
    num                  go to state 62


State 70

   44 relop: EQ .

    $default  reduce using rule 44 (relop)


State 71

   45 relop: NE .

    $default  reduce using rule 45 (relop)


State 72

   41 relop: LT .

    $default  reduce using rule 41 (relop)


State 73

   40 relop: LE .

    $default  reduce using rule 40 (relop)


State 74

   43 relop: GT .

    $default  reduce using rule 43 (relop)


State 75

   42 relop: GE .

    $default  reduce using rule 42 (relop)


State 76

   48 addop: PLUS .

    $default  reduce using rule 48 (addop)


State 77

   49 addop: MINUS .

    $default  reduce using rule 49 (addop)


State 78

   38 simple_expression: additive_expression relop . additive_expression

    ID      shift, and go to state 11
    NUM     shift, and go to state 21
    PLUS    shift, and go to state 22
    MINUS   shift, and go to state 23
    LPAREN  shift, and go to state 46

    var                  go to state 90
    additive_expression  go to state 91
    term                 go to state 58
    factor               go to state 59
    call                 go to state 60
    id                   go to state 61
    num                  go to state 62


State 79

   46 additive_expression: additive_expression addop . term

    ID      shift, and go to state 11
    NUM     shift, and go to state 21
    PLUS    shift, and go to state 22
    MINUS   shift, and go to state 23
    LPAREN  shift, and go to state 46

    var     go to state 90
    term    go to state 92
    factor  go to state 59
    call    go to state 60
    id      go to state 61
    num     go to state 62


State 80

   52 mulop: TIMES .

    $default  reduce using rule 52 (mulop)


State 81

   53 mulop: OVER .

    $default  reduce using rule 53 (mulop)


State 82

   50 term: term mulop . factor

    ID      shift, and go to state 11
    NUM     shift, and go to state 21
    PLUS    shift, and go to state 22
    MINUS   shift, and go to state 23
    LPAREN  shift, and go to state 46

    var     go to state 90
    factor  go to state 93
    call    go to state 60
    id      go to state 61
    num     go to state 62


State 83

   58 call: id LPAREN . args RPAREN

    ID      shift, and go to state 11
    NUM     shift, and go to state 21
    PLUS    shift, and go to state 22
    MINUS   shift, and go to state 23
    LPAREN  shift, and go to state 46

    $default  reduce using rule 60 (args)

    expression           go to state 94
    var                  go to state 55
    simple_expression    go to state 56
    additive_expression  go to state 57
    term                 go to state 58
    factor               go to state 59
    call                 go to state 60
    args                 go to state 95
    arg_list             go to state 96
    id                   go to state 61
    num                  go to state 62


State 84

   37 var: id LBRACE . expression RBRACE

    ID      shift, and go to state 11
    NUM     shift, and go to state 21
    PLUS    shift, and go to state 22
    MINUS   shift, and go to state 23
    LPAREN  shift, and go to state 46

    expression           go to state 97
    var                  go to state 55
    simple_expression    go to state 56
    additive_expression  go to state 57
    term                 go to state 58
    factor               go to state 59
    call                 go to state 60
    id                   go to state 61
    num                  go to state 62


State 85

   29 selection_stmt: IF LPAREN expression . RPAREN statement
   30               | IF LPAREN expression . RPAREN statement ELSE statement

    RPAREN  shift, and go to state 98


State 86

   31 iteration_stmt: WHILE LPAREN expression . RPAREN statement

    RPAREN  shift, and go to state 99


State 87

   33 return_stmt: RETURN expression SEMI .

    $default  reduce using rule 33 (return_stmt)


State 88

   54 factor: LPAREN expression RPAREN .

    $default  reduce using rule 54 (factor)


State 89

   34 expression: var ASSIGN expression .

    $default  reduce using rule 34 (expression)


State 90

   55 factor: var .

    $default  reduce using rule 55 (factor)


State 91

   38 simple_expression: additive_expression relop additive_expression .
   46 additive_expression: additive_expression . addop term

    PLUS   shift, and go to state 76
    MINUS  shift, and go to state 77

    $default  reduce using rule 38 (simple_expression)

    addop  go to state 79


State 92

   46 additive_expression: additive_expression addop term .
   50 term: term . mulop factor

    TIMES  shift, and go to state 80
    OVER   shift, and go to state 81

    $default  reduce using rule 46 (additive_expression)

    mulop  go to state 82


State 93

   50 term: term mulop factor .

    $default  reduce using rule 50 (term)


State 94

   62 arg_list: expression .

    $default  reduce using rule 62 (arg_list)


State 95

   58 call: id LPAREN args . RPAREN

    RPAREN  shift, and go to state 100


State 96

   59 args: arg_list .
   61 arg_list: arg_list . COMMA expression

    COMMA  shift, and go to state 101

    $default  reduce using rule 59 (args)


State 97

   37 var: id LBRACE expression . RBRACE

    RBRACE  shift, and go to state 102


State 98

   29 selection_stmt: IF LPAREN expression RPAREN . statement
   30               | IF LPAREN expression RPAREN . statement ELSE statement

    IF      shift, and go to state 42
    WHILE   shift, and go to state 43
    RETURN  shift, and go to state 44
    ID      shift, and go to state 11
    NUM     shift, and go to state 21
    PLUS    shift, and go to state 22
    MINUS   shift, and go to state 23
    SEMI    shift, and go to state 45
    LPAREN  shift, and go to state 46
    LCURLY  shift, and go to state 32

    compound_stmt        go to state 48
    statement            go to state 103
    expression_stmt      go to state 50
    selection_stmt       go to state 51
    iteration_stmt       go to state 52
    return_stmt          go to state 53
    expression           go to state 54
    var                  go to state 55
    simple_expression    go to state 56
    additive_expression  go to state 57
    term                 go to state 58
    factor               go to state 59
    call                 go to state 60
    id                   go to state 61
    num                  go to state 62


State 99

   31 iteration_stmt: WHILE LPAREN expression RPAREN . statement

    IF      shift, and go to state 42
    WHILE   shift, and go to state 43
    RETURN  shift, and go to state 44
    ID      shift, and go to state 11
    NUM     shift, and go to state 21
    PLUS    shift, and go to state 22
    MINUS   shift, and go to state 23
    SEMI    shift, and go to state 45
    LPAREN  shift, and go to state 46
    LCURLY  shift, and go to state 32

    compound_stmt        go to state 48
    statement            go to state 104
    expression_stmt      go to state 50
    selection_stmt       go to state 51
    iteration_stmt       go to state 52
    return_stmt          go to state 53
    expression           go to state 54
    var                  go to state 55
    simple_expression    go to state 56
    additive_expression  go to state 57
    term                 go to state 58
    factor               go to state 59
    call                 go to state 60
    id                   go to state 61
    num                  go to state 62


State 100

   58 call: id LPAREN args RPAREN .

    $default  reduce using rule 58 (call)


State 101

   61 arg_list: arg_list COMMA . expression

    ID      shift, and go to state 11
    NUM     shift, and go to state 21
    PLUS    shift, and go to state 22
    MINUS   shift, and go to state 23
    LPAREN  shift, and go to state 46

    expression           go to state 105
    var                  go to state 55
    simple_expression    go to state 56
    additive_expression  go to state 57
    term                 go to state 58
    factor               go to state 59
    call                 go to state 60
    id                   go to state 61
    num                  go to state 62


State 102

   37 var: id LBRACE expression RBRACE .

    $default  reduce using rule 37 (var)


State 103

   29 selection_stmt: IF LPAREN expression RPAREN statement .
   30               | IF LPAREN expression RPAREN statement . ELSE statement

    ELSE  shift, and go to state 106

    $default  reduce using rule 29 (selection_stmt)


State 104

   31 iteration_stmt: WHILE LPAREN expression RPAREN statement .

    $default  reduce using rule 31 (iteration_stmt)


State 105

   61 arg_list: arg_list COMMA expression .

    $default  reduce using rule 61 (arg_list)


State 106

   30 selection_stmt: IF LPAREN expression RPAREN statement ELSE . statement

    IF      shift, and go to state 42
    WHILE   shift, and go to state 43
    RETURN  shift, and go to state 44
    ID      shift, and go to state 11
    NUM     shift, and go to state 21
    PLUS    shift, and go to state 22
    MINUS   shift, and go to state 23
    SEMI    shift, and go to state 45
    LPAREN  shift, and go to state 46
    LCURLY  shift, and go to state 32

    compound_stmt        go to state 48
    statement            go to state 107
    expression_stmt      go to state 50
    selection_stmt       go to state 51
    iteration_stmt       go to state 52
    return_stmt          go to state 53
    expression           go to state 54
    var                  go to state 55
    simple_expression    go to state 56
    additive_expression  go to state 57
    term                 go to state 58
    factor               go to state 59
    call                 go to state 60
    id                   go to state 61
    num                  go to state 62


State 107

   30 selection_stmt: IF LPAREN expression RPAREN statement ELSE statement .

    $default  reduce using rule 30 (selection_stmt)
